--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:release-gate": "ts-node scripts/check-release-gate.ts",
     "build": "tsc",
     "dev": "tsc --watch",
-    "lint": "echo 'Linting not configured yet'"
+    "lint": "echo 'Linting not configured yet'",
+    "demos": "npx vite serve demos",
+    "demos:main": "node start-demos.js"
   },
   "keywords": [
     "webgl2",
